[gd_scene load_steps=47 format=3 uid="uid://ddi7wqycrl4sb"]

[ext_resource type="PackedScene" uid="uid://c1d6g64utdy0a" path="res://scenes/rhythm_base/rhythm_base.tscn" id="1_hagkd"]
[ext_resource type="PackedScene" uid="uid://b5ucfx8fc6ffe" path="res://scenes/ui/game_ui.tscn" id="1_osv4t"]
[ext_resource type="Script" uid="uid://cowgwjxqhm7pk" path="res://scenes/zen_garden/zen_garden_singing_level.gd" id="1_r5g3c"]
[ext_resource type="PackedScene" uid="uid://beivor4vhcbrd" path="res://scenes/zen_garden/singing_monk.tscn" id="2_jn2uw"]
[ext_resource type="Script" uid="uid://dw4lm56cfg2pg" path="res://scenes/zen_garden/rhythm_event_creator.gd" id="3_3rur6"]
[ext_resource type="Script" uid="uid://btsvj6avenf0k" path="res://scenes/old_files/zen_garden/timed_starter.gd" id="4_t80qu"]
[ext_resource type="Resource" uid="uid://dbbfhffnh0ppb" path="res://scenes/zen_garden/zen_garden_singing_rhythm_scene_data.tres" id="5_3rur6"]
[ext_resource type="Texture2D" uid="uid://bj48hfo2i6qoh" path="res://2d/placeholder/test_draw_texture.png" id="5_osv4t"]
[ext_resource type="Texture2D" uid="uid://ggpk0y3fxptv" path="res://2d/zen/Zen Garden Background Blanc.png" id="6_bwifo"]
[ext_resource type="Script" uid="uid://b5nqt0btswijk" path="res://scenes/old_files/zen_garden/zen_player_path_follow.gd" id="6_r5g3c"]
[ext_resource type="PackedScene" uid="uid://cee1vmk181t3o" path="res://scenes/old_files/zen_garden/zen_line_2d.tscn" id="7_3rur6"]
[ext_resource type="Texture2D" uid="uid://cytq05j3vb0yv" path="res://Assets/Zen Garden/Background/bg-1.png" id="7_8f3qg"]
[ext_resource type="Texture2D" uid="uid://cg8mtlks3cqjs" path="res://Assets/Zen Garden/Background/bg-2-cloud-loop.png" id="7_8jsrj"]
[ext_resource type="Shader" uid="uid://diio5h8lx0mkf" path="res://scenes/zen_garden/zen_garden_singing_level.gdshader" id="7_eyw3c"]
[ext_resource type="Texture2D" uid="uid://cdab5bs1limn1" path="res://Assets/Zen Garden/Background/bg-3.png" id="7_ke7tj"]
[ext_resource type="Texture2D" uid="uid://n7pd83x7ec6j" path="res://2d/zen/fader.png" id="8_0wtlu"]
[ext_resource type="Script" uid="uid://bp5j0o2kg3hvh" path="res://scenes/zen_garden/line_controller.gd" id="8_8f3qg"]
[ext_resource type="Texture2D" uid="uid://c2jhn8cjwt3h" path="res://Assets/Zen Garden/Background/bg-5.png" id="8_8jsrj"]
[ext_resource type="Texture2D" uid="uid://dm78ebdyk0rnu" path="res://2d/placeholder/circle_1x1.svg" id="8_t80qu"]
[ext_resource type="PackedScene" uid="uid://qaqtgnhhhqqy" path="res://scenes/zen_garden/line.tscn" id="9_8jsrj"]
[ext_resource type="Texture2D" uid="uid://dqsy83pxlxqwl" path="res://Assets/Zen Garden/Background/Lines/bg-4-l2.png" id="18_bc303"]
[ext_resource type="Texture2D" uid="uid://brrnviljc472e" path="res://Assets/Zen Garden/Background/Lines/bg-4-l2w.png" id="18_kxa2q"]
[ext_resource type="Texture2D" uid="uid://bm8sd3ijqa1k0" path="res://Assets/Zen Garden/Background/Lines/bg-4-l3w.png" id="20_ju4mw"]
[ext_resource type="Texture2D" uid="uid://bkt37gsjun4nm" path="res://Assets/Zen Garden/Background/Lines/bg-4-l3.png" id="21_qbmkk"]
[ext_resource type="Texture2D" uid="uid://bmdevydqwn6b4" path="res://Assets/Zen Garden/Background/Lines/bg-4-l4w.png" id="22_wfyxi"]
[ext_resource type="Texture2D" uid="uid://dv5560sdt3rjl" path="res://Assets/Zen Garden/Background/Lines/bg-4-l4.png" id="23_2hno4"]
[ext_resource type="Texture2D" uid="uid://b2tofqxs438jr" path="res://Assets/Zen Garden/Background/Lines/bg-4-l5w.png" id="24_4ri8s"]
[ext_resource type="Texture2D" uid="uid://oh3ais5ehpvf" path="res://Assets/Zen Garden/Background/Lines/bg-4-l5.png" id="25_b1n2n"]
[ext_resource type="Texture2D" uid="uid://bsnr437ml0fi7" path="res://Assets/Zen Garden/Background/Lines/bg-4-l6w.png" id="26_l4h26"]
[ext_resource type="Texture2D" uid="uid://dr7f81kt2v3g1" path="res://Assets/Zen Garden/Background/Lines/bg-4-l6.png" id="27_6a8qv"]
[ext_resource type="Texture2D" uid="uid://dvs2ijvwdukgi" path="res://Assets/Zen Garden/Background/Lines/bg-4-l7w.png" id="28_ntrlb"]
[ext_resource type="Texture2D" uid="uid://cbqgcveh45o0u" path="res://Assets/Zen Garden/Background/Lines/bg-4-l7.png" id="29_ke7tj"]
[ext_resource type="Texture2D" uid="uid://d4ak3u3iss2qi" path="res://Assets/Zen Garden/Background/Lines/bg-4-l8w.png" id="30_8jsrj"]
[ext_resource type="Texture2D" uid="uid://4py64s6bo3uo" path="res://Assets/Zen Garden/Background/Lines/bg-4-l8.png" id="31_8f3qg"]

[sub_resource type="Curve2D" id="Curve2D_8f3qg"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 548.062, 307, 0, 0, 0, 0, 542.6356, 310, 0, 0, 0, 0, 531.00775, 316, 0, 0, 0, 0, 522.4806, 322, 0, 0, 0, 0, 520.155, 332, 0, 0, 0, 0, 525.5814, 341, 0, 0, 0, 0, 531.78296, 347, 0, 0, 0, 0, 542.6356, 351, 0, 0, 0, 0, 562.79065, 357, 0, 0, 0, 0, 586.82166, 362, 0, 0, 0, 0, 608.5271, 364, 0, 0, 0, 0, 636.4341, 366, 0, 0, 0, 0, 667.4419, 365, 0, 0, 0, 0, 702.32556, 363, 0, 0, 0, 0, 727.1318, 361, 0, 0, 0, 0, 748.8372, 355, 0, 0, 0, 0, 770.54266, 349, 0, 0, 0, 0, 788.3721, 340, 0, 0, 0, 0, 794.57367, 330, 0, 0, 0, 0, 792.24805, 322, 0, 0, 0, 0, 785.2713, 315, 0, 0, 0, 0, 774.4186, 309, 0, 0, 0, 0, 765.1163, 306, 0, 0, 0, 0, 731.78296, 298, 0, 0, 0, 0, 685.2713, 293, 0, 0, 0, 0, 642.6356, 291, 0, 0, 0, 0, 588.3721, 294, 0, 0, 0, 0, 549.6124, 306, 0, 0, 0, 0, 548.062, 307)
}
point_count = 29

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8jsrj"]
resource_local_to_scene = true
shader = ExtResource("7_eyw3c")
shader_parameter/mask = ExtResource("8_0wtlu")
shader_parameter/progress = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8f3qg"]
resource_local_to_scene = true
shader = ExtResource("7_eyw3c")
shader_parameter/mask = ExtResource("8_0wtlu")
shader_parameter/progress = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rodxa"]
resource_local_to_scene = true
shader = ExtResource("7_eyw3c")
shader_parameter/mask = ExtResource("8_0wtlu")
shader_parameter/progress = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_pmntt"]
resource_local_to_scene = true
shader = ExtResource("7_eyw3c")
shader_parameter/mask = ExtResource("8_0wtlu")
shader_parameter/progress = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_e7svu"]
resource_local_to_scene = true
shader = ExtResource("7_eyw3c")
shader_parameter/mask = ExtResource("8_0wtlu")
shader_parameter/progress = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_d33sh"]
resource_local_to_scene = true
shader = ExtResource("7_eyw3c")
shader_parameter/mask = ExtResource("8_0wtlu")
shader_parameter/progress = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ncdbi"]
resource_local_to_scene = true
shader = ExtResource("7_eyw3c")
shader_parameter/mask = ExtResource("8_0wtlu")
shader_parameter/progress = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_or4sn"]
resource_local_to_scene = true
shader = ExtResource("7_eyw3c")
shader_parameter/mask = ExtResource("8_0wtlu")
shader_parameter/progress = 0.0

[sub_resource type="Curve2D" id="Curve2D_8jsrj"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0kq45"]

[sub_resource type="Curve2D" id="Curve2D_6hbp2"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 548.062, 307, 0, 0, 0, 0, 542.6356, 310, 0, 0, 0, 0, 531.00775, 316, 0, 0, 0, 0, 522.4806, 322, 0, 0, 0, 0, 520.155, 332, 0, 0, 0, 0, 525.5814, 341, 0, 0, 0, 0, 531.78296, 347, 0, 0, 0, 0, 542.6356, 351, 0, 0, 0, 0, 562.79065, 357, 0, 0, 0, 0, 586.82166, 362, 0, 0, 0, 0, 608.5271, 364, 0, 0, 0, 0, 636.4341, 366, 0, 0, 0, 0, 667.4419, 365, 0, 0, 0, 0, 702.32556, 363, 0, 0, 0, 0, 727.1318, 361, 0, 0, 0, 0, 748.8372, 355, 0, 0, 0, 0, 770.54266, 349, 0, 0, 0, 0, 788.3721, 340, 0, 0, 0, 0, 794.57367, 330, 0, 0, 0, 0, 792.24805, 322, 0, 0, 0, 0, 785.2713, 315, 0, 0, 0, 0, 774.4186, 309, 0, 0, 0, 0, 765.1163, 306, 0, 0, 0, 0, 731.78296, 298, 0, 0, 0, 0, 685.2713, 293, 0, 0, 0, 0, 642.6356, 291, 0, 0, 0, 0, 588.3721, 294, 0, 0, 0, 0, 549.6124, 306, 0, 0, 0, 0, 548.062, 307)
}
point_count = 29

[node name="ZenGardenSinging" type="Node2D" node_paths=PackedStringArray("rhythm_scene")]
script = ExtResource("1_r5g3c")
rhythm_scene = NodePath("RhythmBase")

[node name="UI" parent="." instance=ExtResource("1_osv4t")]

[node name="RhythmBase" parent="." instance=ExtResource("1_hagkd")]
offset_left = 1.0
offset_right = 1.0
scene_data = ExtResource("5_3rur6")

[node name="RhythmEventCreator" type="Node" parent="." node_paths=PackedStringArray("event_node_parent", "zen_player_path_follow", "singing_monk")]
script = ExtResource("3_3rur6")
event_node_parent = NodePath("..")
zen_player_path_follow = NodePath("../Path/ZenPlayerPathFollow")
singing_monk = NodePath("../SingingMonk")

[node name="Background" type="Sprite2D" parent="."]
visible = false
position = Vector2(640, 360)
scale = Vector2(0.5, 0.5)
texture = ExtResource("6_bwifo")

[node name="BGSky" type="Sprite2D" parent="."]
position = Vector2(640, 360)
scale = Vector2(0.5, 0.5)
texture = ExtResource("7_8f3qg")

[node name="BGClouds" type="Sprite2D" parent="."]
position = Vector2(640, 360)
scale = Vector2(0.5, 0.5)
texture = ExtResource("7_8jsrj")

[node name="BGGroundTree" type="Sprite2D" parent="."]
position = Vector2(640, 360)
scale = Vector2(0.5, 0.5)
texture = ExtResource("7_ke7tj")

[node name="LineController" type="Node2D" parent="." node_paths=PackedStringArray("lines")]
position = Vector2(640, 360)
script = ExtResource("8_8f3qg")
lines = [NodePath("Line1")]

[node name="Line1" parent="LineController" node_paths=PackedStringArray("target_path") instance=ExtResource("9_8jsrj")]
target_path = NodePath("../Path2D")
curve = SubResource("Curve2D_8f3qg")

[node name="PreviewSprite2D" parent="LineController/Line1" index="0"]
material = SubResource("ShaderMaterial_8jsrj")

[node name="Line2" parent="LineController" node_paths=PackedStringArray("target_path") instance=ExtResource("9_8jsrj")]
target_path = NodePath("../Path2D")

[node name="PreviewSprite2D" parent="LineController/Line2" index="0"]
material = SubResource("ShaderMaterial_8f3qg")
texture = ExtResource("18_kxa2q")

[node name="LineSprite2D" parent="LineController/Line2" index="1"]
texture = ExtResource("18_bc303")

[node name="Line3" parent="LineController" node_paths=PackedStringArray("target_path") instance=ExtResource("9_8jsrj")]
target_path = NodePath("../Path2D")

[node name="PreviewSprite2D" parent="LineController/Line3" index="0"]
material = SubResource("ShaderMaterial_rodxa")
texture = ExtResource("20_ju4mw")

[node name="LineSprite2D" parent="LineController/Line3" index="1"]
texture = ExtResource("21_qbmkk")

[node name="Line4" parent="LineController" node_paths=PackedStringArray("target_path") instance=ExtResource("9_8jsrj")]
target_path = NodePath("../Path2D")

[node name="PreviewSprite2D" parent="LineController/Line4" index="0"]
material = SubResource("ShaderMaterial_pmntt")
texture = ExtResource("22_wfyxi")

[node name="LineSprite2D" parent="LineController/Line4" index="1"]
texture = ExtResource("23_2hno4")

[node name="Line5" parent="LineController" node_paths=PackedStringArray("target_path") instance=ExtResource("9_8jsrj")]
target_path = NodePath("../Path2D")

[node name="PreviewSprite2D" parent="LineController/Line5" index="0"]
material = SubResource("ShaderMaterial_e7svu")
texture = ExtResource("24_4ri8s")

[node name="LineSprite2D" parent="LineController/Line5" index="1"]
texture = ExtResource("25_b1n2n")

[node name="Line6" parent="LineController" node_paths=PackedStringArray("target_path") instance=ExtResource("9_8jsrj")]
target_path = NodePath("../Path2D")

[node name="PreviewSprite2D" parent="LineController/Line6" index="0"]
material = SubResource("ShaderMaterial_d33sh")
texture = ExtResource("26_l4h26")

[node name="LineSprite2D" parent="LineController/Line6" index="1"]
texture = ExtResource("27_6a8qv")

[node name="Line7" parent="LineController" node_paths=PackedStringArray("target_path") instance=ExtResource("9_8jsrj")]
target_path = NodePath("../Path2D")

[node name="PreviewSprite2D" parent="LineController/Line7" index="0"]
material = SubResource("ShaderMaterial_ncdbi")
texture = ExtResource("28_ntrlb")

[node name="LineSprite2D" parent="LineController/Line7" index="1"]
texture = ExtResource("29_ke7tj")

[node name="Line8" parent="LineController" node_paths=PackedStringArray("target_path") instance=ExtResource("9_8jsrj")]
target_path = NodePath("../Path2D")

[node name="PreviewSprite2D" parent="LineController/Line8" index="0"]
material = SubResource("ShaderMaterial_or4sn")
texture = ExtResource("30_8jsrj")

[node name="LineSprite2D" parent="LineController/Line8" index="1"]
texture = ExtResource("31_8f3qg")

[node name="Path2D" type="Path2D" parent="LineController"]
curve = SubResource("Curve2D_8jsrj")

[node name="TelegraphPathFollow2D" type="PathFollow2D" parent="LineController/Path2D"]

[node name="CircleInner" type="Sprite2D" parent="LineController/Path2D/TelegraphPathFollow2D"]
modulate = Color(0.99607843, 0.42352942, 0.043137256, 1)
texture_filter = 1
rotation = 0.023525076
scale = Vector2(0.8, 0.8)
texture = ExtResource("8_t80qu")

[node name="CircleOutter" type="Sprite2D" parent="LineController/Path2D/TelegraphPathFollow2D"]
modulate = Color(0.89, 0.5265834, 0.017799983, 0.6509804)
texture_filter = 1
rotation = 0.023525072
scale = Vector2(1.5, 1.5)
texture = ExtResource("8_t80qu")

[node name="ActualPathFollow2D2" type="PathFollow2D" parent="LineController/Path2D"]

[node name="CircleInner" type="Sprite2D" parent="LineController/Path2D/ActualPathFollow2D2"]
modulate = Color(0.99607843, 0.42352942, 0.043137256, 1)
texture_filter = 1
rotation = 0.023525076
scale = Vector2(0.8, 0.8)
texture = ExtResource("8_t80qu")

[node name="CircleOutter" type="Sprite2D" parent="LineController/Path2D/ActualPathFollow2D2"]
modulate = Color(0.89, 0.5265834, 0.017799983, 0.6509804)
texture_filter = 1
rotation = 0.023525072
scale = Vector2(1.5, 1.5)
texture = ExtResource("8_t80qu")

[node name="BGStones" type="Sprite2D" parent="."]
position = Vector2(640, 360)
scale = Vector2(0.5, 0.5)
texture = ExtResource("8_8jsrj")

[node name="DrawnLines" type="Node2D" parent="." node_paths=PackedStringArray("target_lines")]
visible = false
script = ExtResource("4_t80qu")
target_lines = [null, null, null]
target_times = Array[float]([0.5, 1.5, 2.5, 7.0])

[node name="Line2D" type="Line2D" parent="DrawnLines"]
texture_repeat = 2
material = SubResource("ShaderMaterial_0kq45")
position = Vector2(0, -2)
rotation = -0.00039833438
points = PackedVector2Array(33, 310, 551, 314, 610, 266, 646, 265, 672.886, 286.26804, 684.8757, 312.27283, 679.8681, 331.27084, 664, 352, 649.85614, 361.25888, 629, 368, 607.85535, 363.24216, 592, 353, 577.8681, 331.2302, 574, 304, 581.88684, 284.2318, 589.8908, 274.235, 598, 267, 616.89557, 262.24573, 631.896, 261.2517, 654, 265, 692.88605, 286.276, 737.88007, 301.29395, 780.8749, 314.31107, 1022, 315, 1147, 319)
texture = ExtResource("5_osv4t")
texture_mode = 1
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
round_precision = 12

[node name="TelegraphedHoldLine" type="Line2D" parent="."]

[node name="Path" type="Path2D" parent="."]
position = Vector2(-225.99998, 175.99998)
scale = Vector2(1.29, 1)
curve = SubResource("Curve2D_6hbp2")

[node name="ZenPlayerPathFollow" type="PathFollow2D" parent="Path" node_paths=PackedStringArray("drawn_lines", "telegraphed_path_follow")]
z_index = 1
position = Vector2(548.062, 307)
rotation = -0.023525072
rotates = false
script = ExtResource("6_r5g3c")
speed = 100.0
drawn_lines = NodePath("../../TelegraphedHoldLine")
zen_line_scene = ExtResource("7_3rur6")
telegraphed_path_follow = NodePath("../TelegraphedPathFollow")

[node name="CircleInner" type="Sprite2D" parent="Path/ZenPlayerPathFollow"]
modulate = Color(0.99607843, 0.42352942, 0.043137256, 1)
texture_filter = 1
rotation = 0.023525076
scale = Vector2(0.8, 0.8)
texture = ExtResource("8_t80qu")

[node name="CircleOutter" type="Sprite2D" parent="Path/ZenPlayerPathFollow"]
modulate = Color(0.89, 0.5265834, 0.017799983, 0.6509804)
texture_filter = 1
rotation = 0.023525072
scale = Vector2(1.5, 1.5)
texture = ExtResource("8_t80qu")

[node name="TelegraphedPathFollow" type="PathFollow2D" parent="Path"]
position = Vector2(548.062, 307)
rotation = -0.023525072
rotates = false

[node name="SingingMonk" parent="." node_paths=PackedStringArray("target_pos_node", "fall_object_manager") instance=ExtResource("2_jn2uw")]
position = Vector2(638, 360)
target_pos_node = NodePath("../Path/ZenPlayerPathFollow")
fall_object_manager = NodePath("../RhythmEventCreator")

[connection signal="set_paused" from="UI" to="." method="_on_ui_set_paused"]
[connection signal="start_pressed" from="UI" to="." method="_on_ui_start_pressed"]
[connection signal="stop_pressed" from="UI" to="." method="_on_ui_stop_pressed"]
[connection signal="toggle_rhythm_ui" from="UI" to="." method="_on_ui_toggle_rhythm_ui"]
[connection signal="event_triggered" from="RhythmBase" to="RhythmEventCreator" method="_on_rhythm_base_event_triggered"]
[connection signal="note_failed" from="RhythmBase" to="UI" method="_on_rhythm_base_note_failed"]
[connection signal="note_failed" from="RhythmBase" to="SingingMonk" method="_on_rhythm_base_note_failed"]
[connection signal="note_hit" from="RhythmBase" to="UI" method="_on_rhythm_base_note_hit"]
[connection signal="note_missed" from="RhythmBase" to="UI" method="_on_rhythm_base_note_missed"]
[connection signal="note_missed" from="RhythmBase" to="SingingMonk" method="_on_rhythm_base_note_missed"]
[connection signal="note_tap_hit" from="RhythmBase" to="SingingMonk" method="_on_rhythm_base_note_tap_hit"]
[connection signal="reset_progress" from="RhythmBase" to="UI" method="_on_rhythm_base_reset_progress"]
[connection signal="reset_progress" from="RhythmBase" to="Path/ZenPlayerPathFollow" method="_on_rhythm_base_reset_progress"]
[connection signal="started_playing" from="RhythmBase" to="UI" method="_on_rhythm_base_started_playing"]
[connection signal="started_playing" from="RhythmBase" to="Path/ZenPlayerPathFollow" method="_on_rhythm_base_started_playing"]
[connection signal="started_playing" from="RhythmBase" to="SingingMonk" method="_on_rhythm_base_started_playing"]
[connection signal="stopped_playing" from="RhythmBase" to="UI" method="_on_rhythm_base_stopped_playing"]
[connection signal="stopped_playing" from="RhythmBase" to="Path/ZenPlayerPathFollow" method="_on_rhythm_base_stopped_playing"]
[connection signal="stopped_playing" from="RhythmBase" to="SingingMonk" method="_on_rhythm_base_stopped_playing"]

[editable path="LineController/Line1"]
[editable path="LineController/Line2"]
[editable path="LineController/Line3"]
[editable path="LineController/Line4"]
[editable path="LineController/Line5"]
[editable path="LineController/Line6"]
[editable path="LineController/Line7"]
[editable path="LineController/Line8"]
